2008-01-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Clearly explain in the help that --with-user-dir
	is an obsolete option in gnustep-make v2.  Print a warning if it
	used, and otherwise ignore it.
	* configure: Regenerated.
	* gnustep-config.in: Updated help removing mention of
	GNUSTEP_USER_DIR.
	
2008-01-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUstep.sh.in: Unset GNUSTEP_SYSTEM_USERS_DIR,
	GNUSTEP_LOCAL_USERS_DIR, GNUSTEP_NETWORK_USERS_DIR at the end, or
	export them if GNUSTEP_SH_EXPORT_ALL_VARIABLES if set.
	* GNUstep.csh.in: Unset the same variables at the end.

2008-01-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* filesystem.sh.in: Fixed typo which was causing
	GNUSTEP_USER_DIR_WEB_APPS not to be removed from the environment.

2008-01-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* relative_path.sh: Added optional third parameter to specify
	whether 'strict' or 'short' output is required.  Default to
	'strict' so that the configuration system works.
	* Instance/application.make: Use 'short' option to
	relative_path.sh to get more compact paths.
	* Instance/framework.make: Same change.
	
2008-01-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config.make.in (LN_S_RECURSIVE): New variable.
	* Instance/application.make: Use it when symlinking a directory.
	* Instance/framework.make: Same changes.
	
2008-01-08  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.4 (on stable branch).

2008-01-03  Richard Frith-Macdonald <rfm@gnu.org>

	* relative_path.sh: Revert previous change as it broke the use of
	relative paths within the configuration system ... critical for
	ms-windows systems where relative paths are used by default!

2008-01-01  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.3 (on stable branch).

2007-12-30  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.Darwin: Update for compiling with
	Apple gcc.

2007-12-26  Nicola Pero  <nicola.pero@meta-innovation.com>
